# Arbeitszeitdokumentationsgenerator

./: Cargo.toml  README.md  flake.nix  kit_timesheet.md  kit_timesheet.typ
src/: endpoints.rs  main.rs  render.rs
src/endpoints/: base.css  index.css  index.js  index.rs  tsg.css  tsg.js  tsg.rs
