[package]
name = "arbeitszeitdokumentationsgenerator"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["form"] }
clap = { version = "4.5.36", features = ["derive", "deprecated"] }
el = { version = "0.2.0", features = ["axum"] }
fontdb = "0.23.0"
jiff = "0.2.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
typst = "0.12.0"
typst-pdf = "0.12.0"
